# MurfAI

./: .env.example  .gitignore  PROJECT_EXPLANATION.md  README.md  app.py  conversational_murf_ai.py  demo_script.py  main.py  murf_ai_assistant.py  omni_ai_assistant.py  pyproject.toml  requirements.txt  run.py  setup_display.sh  simple_app.py  test_env.py  test_features.py  video_demo_script.py
