[project]
name = "murf-ai-assistant"
version = "1.0.0"
description = "Multi-agent AI assistant with Murf voice integration"
authors = [{name = "Jitesh", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31.0",
    "PyQt6>=6.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
