[project]
name = "murf-ai-assistant"
version = "1.0.0"
description = "Multi-agent AI assistant with Murf voice integration"
authors = [{name = "Jitesh", email = "jitesh.kumar05official@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "requests>=2.31.0",
    "pyqt6>=6.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "speechrecognition>=3.14.3",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "qasync>=0.27.1",
    "pyaudio>=0.2.14",
    "murf>=2.0.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
    "langdetect>=1.0.9",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.2",
    "pillow>=10.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
